<resources>
    <string name="app_name">LONDON BERLIN</string>
    <string name="title_activity_pref">PrefActivity</string>
    <string name="my_text1">TEXT1</string>
    <string name="my_text2">TEXT2</string>
    <string name="my_text3">TEXT2</string>
    <string name="steretb">Cancel</string>
    <string name="otvetitb">Reply</string>
    <string name="vbIy4eno">Learned words</string>
    <string name="vsego_slov">Of all words</string>
    <string name="dalshe">Next</string>
    <string name="my_button">BUTTON</string>
    <string name="ychitbcnachala">Teach first</string>
    <string name="ydalitb_slovarb">Delete dictionary</string>
    <string name="dialog_ydalitb_slovarb">Are you sure that you want to delete the selected dictionaries</string>
    <string name="dialog_zagryzitb_slovarb">Download selected dictionaries</string>
    <string name="nastroiki">Settings</string>
    <string name="slovari">Dictionaries</string>
    <string name="gramatika">Grammar</string>
    <string name="proiznoshenie">Pronunciation</string>
    <string name="londonberlin">download dictionary</string>
    <string name="skachatb_vbIbrannbIe">Download selected</string>
    <string name="title_activity_activiti_slovarb">ActivitiSlovarb</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="exit">The dictionary is over.</string>
    <string name="exit_ychitb_c_nachala">Are you sure that you want to learn the dictionary from the beginning</string>
    <string name="save_data">Select next Action</string>
    <string name="ychitb_zanovo">Learn again</string>
    <string name="internet">"Couldn\'t get json from server. Check LogCat for possible errors!"</string>
    <string name="ok">OK</string>
    <string name="cencel">Cancel</string>
    <string name="vubratb_drygoi_slovarb">Choose another dictionary</string>
    <string name="title_activity_activiti_nastroiki">ActivitiNastroiki</string>
    <string name="otvetu">Answers</string>
    <string name="otvetu_opicanie">Number of correct answers</string>
    <string name="zagryzka_spiska_slovarey">zagryzka_spiska_slovarey</string>
    <string name="zagryzka_slovarya_v_bazy">zagryzka_slovarya_v_bazy</string>
    <string name="del_slovar">del</string>
    <string name="Json_parsing_error">Json_parsing_error:</string>
    <string-array name="otvetu">
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>
    <string-array name="otvetu_values">
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>
    <string name="variantu">Variants </string>
    <string name="language">Language</string>
    <string name="variantu_opicanie">Number of answer variants</string>
    <string name="language_opicanie">Choose language</string>
    <string-array name="variantu">
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>
    <string-array name="variantu_values">
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>
    <string-array name="pref_locale_language">
        <item>English</item>
        <item>Русский</item>
        <item>Украінська</item>
    </string-array>
    <string-array name="pref_locale_language_values">
        <item>en</item>
        <item >ru</item>
        <item>uk</item>

    </string-array>
    <string name="title_activity_gramatika">GramatikaActivity</string>
    <string name="title_activity_gramatika_main">GramatikaMainActivity</string>
    <string name="title_activity_proiznoshenie">ProiznoshenieActivity</string>
    <string name="title_activity_londonberlin">LondonBerlinActivity</string>
    <string name="textrussian_gramatikamain_item">russian</string>
    <string name="textenglish_gramatikamain_item">english</string>
<string name="string_proiznoshenie"> <b>I тип чтения – открытый слог (открытым считается слог, оканчивающийся на гласную, даже если она не произносится)

        Обратите внимание на первую строку таблицы. Слова same, note, he, fine, my, cube как и все слова этой категории оканчиваются на немую гласную, а чтение гласных в корне слова совпадает с названием букв согласно алфавиту. Таким образом, слова с немыми гласными на конце, т.е. слова 1 типа чтения same, note, he, fine, my, cube, будут звучать как «сейм, ноут, хи, файн, май, кьюб»

        Закрепим чтение гласных в ударном слоге  следующим упражнением:

        Note, lone, mice, rice, type, tune, shy, lay, say, he, hay, name, same, nine, nice, game, came, make, Kate, Pete, five, tie, life, eve, me, size, no, cope, smoke, rose, nose, spine, sly, cry, vine, maze, home, tube, made, fume, cube, pace, lace, sky, hale, spine.

        </b>\n <b> II тип чтения – закрытый слог  (закрытым считается слог, оканчивающийся на согласную). Это вторая строка по таблице. Обратите внимание на слова rat, hot, red, bit, myth, run,  на конце которых отсутствует немая гласная. Эти слова звучат как «рэт, хот, ред, бит, мисс, ран».

        Cap, pen, bed, ten, not, spot, lot, bad, rat, sit, send, test, pit, in, send, spell, tin, less, ban, mad, fat, Sam, land, did, fit, sat, pet, tin, slip, sad, glad, bag, jam, gap, lag, can, kin, Jim, Jack, yes, ink, cup, run, cod, spin, not, doll, hop, hot, bank, rank, spin, up, us, bus, bun, cut, fun, vet, well, but, nut.

       </b> \n <b>III тип чтения – гласная + буква “r”, которая влияет на звучание гласной в корне слова, придавая ей некоторую протяжность. Так слова car, sort, term, fir, Byrd, fur звучат как «ка: со:т, те:м, фё: бе:д, фе: ».

        stern , Far, curt, hard, hart, car, card, cart, fork, cork, work,  sort, term, first,  Byrd, furs, curl,  her, curb, turn, girl, sir, burn, turn, word, born, torn, bird, form, serf, herb.

        </b>\n <b>IV тип чтения – гласная + буква “r”+ гласная. Буква  “r” в данном случае также не читается;  все три гласные в совокупности звучат следующим образом: care, store, mere, tyre, cure – «кэа, сто:, миэ, таиэ, кьюэ».

        Fare , here, pure, rare , cure, during, mare,   fire, bare, mire, stare ,tire,  sere,    mere, store,  core, more, care.
</b>
</string>
</resources>
